// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders a menu of 3 items conditionally 1`] = `
<body>
  <div
    aria-hidden="true"
    data-floating-ui-inert=""
  />
  <div
    class=""
  >
    <div>
      <span
        aria-hidden="true"
        data-floating-ui-focus-guard=""
        data-floating-ui-inert=""
        data-type="inside"
        role="button"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
        tabindex="0"
      />
      <div
        class="absolute block borderBox shadow rounding4"
        style="position: absolute; left: 0px; top: 0px; visibility: visible; outline: none; transform: translate(0px, 0px);"
        tabindex="0"
      >
        <div
          aria-label="Dropdown"
          class="relative maxDimensions minDimensions primary rounding4"
          id="ex-1"
          role="menu"
          style="max-width: 360px; overflow: auto;"
        >
          <div
            class="box flexGrow marginBottom200 marginEnd200 marginStart200 marginTop200 xsDirectionColumn xsDisplayFlex xsItemsCenter"
          >
            <div
              class="rounding2 hideOutlineWithin hideOutline accessibilityOutlineFocus fullWidth pointer"
              id="ex-1-item-0"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 secondary xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="1"
                        >
                          1
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-1"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="2"
                        >
                          2
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-2"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="3"
                        >
                          3
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-3"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="4"
                        >
                          4
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-4"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="5"
                        >
                          5
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-5"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="6"
                        >
                          6
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-6"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="7"
                        >
                          7
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-7"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="8"
                        >
                          8
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-8"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="9"
                        >
                          9
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-9"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="10"
                        >
                          10
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-10"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="11"
                        >
                          11
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-11"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="12"
                        >
                          12
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        aria-hidden="true"
        data-floating-ui-focus-guard=""
        data-floating-ui-inert=""
        data-type="inside"
        role="button"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`Dropdown renders a menu of 6 items 1`] = `
<body>
  <div
    aria-hidden="true"
    data-floating-ui-inert=""
  />
  <div
    class=""
  >
    <div>
      <span
        aria-hidden="true"
        data-floating-ui-focus-guard=""
        data-floating-ui-inert=""
        data-type="inside"
        role="button"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
        tabindex="0"
      />
      <div
        class="absolute block borderBox shadow rounding4"
        style="position: absolute; left: 0px; top: 0px; visibility: visible; outline: none; transform: translate(0px, 0px);"
        tabindex="-1"
      >
        <div
          aria-label="Dropdown"
          class="relative maxDimensions minDimensions primary rounding4"
          id="ex-1"
          role="menu"
          style="max-width: 360px; overflow: auto;"
        >
          <div
            class="box flexGrow marginBottom200 marginEnd200 marginStart200 marginTop200 xsDirectionColumn xsDisplayFlex xsItemsCenter"
          >
            <div
              class="rounding2 hideOutlineWithin hideOutline accessibilityOutlineFocus fullWidth pointer"
              id="ex-1-item-0"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 secondary xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="Item 1"
                        >
                          Item 1
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-1"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="Item 2 with a really long, detailed, complex name"
                        >
                          Item 2 with a really long, detailed, complex name
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-2"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <a
                  class="noOutline inheritColor noUnderline tapTransition rounding0 accessibilityOutline block fullWidth pointer"
                  href="https://pinterest.com"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    class="Flex rowGap0 columnGap0 xsDirectionRow"
                  >
                    <div
                      class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                    >
                      <div
                        class="FlexItem"
                      >
                        <div
                          class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                        >
                          <span
                            class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                            title="External Item 3 with a really long, detailed, complex name"
                          >
                            External Item 3 with a really long, detailed, complex name
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="box justifyEnd marginStart200 transparent xsDisplayNone xsItemsCenter"
                      style="min-width: 12px;"
                    >
                      <div
                        class="box"
                        style="min-width: 12px;"
                      />
                    </div>
                    <div
                      class="box justifyCenter marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    >
                      <svg
                        class="rtlSupport default icon"
                        height="12"
                        role="img"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <title>
                          , Opens a new tab
                        </title>
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="box relative"
                    style="display: inline;"
                  >
                    <div
                      class="box xsDisplayVisuallyHidden"
                    >
                      ; Opens a new tab
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-3"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <div
                  class="Flex rowGap0 columnGap0 xsDirectionRow"
                >
                  <div
                    class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                  >
                    <div
                      class="FlexItem"
                    >
                      <div
                        class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                      >
                        <span
                          class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                          title="Item 4"
                        >
                          Item 4
                        </span>
                        <div
                          class="box marginStart200 marginTop100"
                        >
                          <div
                            class="box xsDisplayVisuallyHidden"
                          >
                            , 
                          </div>
                          <div
                            class="badge info padding middle"
                          >
                            <div
                              class="Flex rowGap100 columnGap0 xsDirectionRow xsItemsCenter"
                            >
                              <div
                                class="FlexItem"
                              >
                                <div
                                  class="box contentCenter xsDisplayFlex"
                                >
                                  <span
                                    class="inverse alignStart breakWord Text fontWeightSemiBold fontSize200"
                                  >
                                    New
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="box justifyEnd marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    style="min-width: 12px;"
                  >
                    <div
                      class="box"
                      style="min-width: 12px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-4"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <a
                  class="noOutline inheritColor noUnderline tapTransition rounding0 accessibilityOutline block fullWidth pointer"
                  href="https://pinterest.com"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    class="Flex rowGap0 columnGap0 xsDirectionRow"
                  >
                    <div
                      class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                    >
                      <div
                        class="FlexItem"
                      >
                        <div
                          class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                        >
                          <span
                            class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                            title="Item 5 with a really long, detailed name"
                          >
                            Item 5 with a really long, detailed name
                          </span>
                          <div
                            class="box marginStart200 marginTop100"
                          >
                            <div
                              class="box xsDisplayVisuallyHidden"
                            >
                              , 
                            </div>
                            <div
                              class="badge info padding middle"
                            >
                              <div
                                class="Flex rowGap100 columnGap0 xsDirectionRow xsItemsCenter"
                              >
                                <div
                                  class="FlexItem"
                                >
                                  <div
                                    class="box contentCenter xsDisplayFlex"
                                  >
                                    <span
                                      class="inverse alignStart breakWord Text fontWeightSemiBold fontSize200"
                                    >
                                      New
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="box justifyEnd marginStart200 transparent xsDisplayNone xsItemsCenter"
                      style="min-width: 12px;"
                    >
                      <div
                        class="box"
                        style="min-width: 12px;"
                      />
                    </div>
                    <div
                      class="box justifyCenter marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    >
                      <svg
                        class="rtlSupport default icon"
                        height="12"
                        role="img"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <title>
                          , Opens a new tab
                        </title>
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="box relative"
                    style="display: inline;"
                  >
                    <div
                      class="box xsDisplayVisuallyHidden"
                    >
                      ; Opens a new tab
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="rounding2 hideOutlineWithin hideOutline fullWidth pointer"
              id="ex-1-item-5"
              role="menuitem"
              rounding="2"
              tabindex="-1"
            >
              <div
                class="box paddingX200 paddingY200 rounding2 transparent xsDirectionColumn xsDisplayFlex"
              >
                <a
                  class="noOutline inheritColor noUnderline tapTransition rounding0 accessibilityOutline block fullWidth pointer"
                  href="https://pinterest.com"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    class="Flex rowGap0 columnGap0 xsDirectionRow"
                  >
                    <div
                      class="Flex rowGap0 columnGap100 flexGrow xsDirectionColumn"
                    >
                      <div
                        class="FlexItem"
                      >
                        <div
                          class="Flex rowGap0 columnGap0 xsDirectionRow xsItemsCenter"
                        >
                          <span
                            class="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                            title="Item 6"
                          >
                            Item 6
                          </span>
                        </div>
                      </div>
                    </div>
                    <div
                      class="box justifyEnd marginStart200 transparent xsDisplayNone xsItemsCenter"
                      style="min-width: 12px;"
                    >
                      <div
                        class="box"
                        style="min-width: 12px;"
                      />
                    </div>
                    <div
                      class="box justifyCenter marginStart200 transparent xsDisplayFlex xsItemsCenter"
                    >
                      <svg
                        class="rtlSupport default icon"
                        height="12"
                        role="img"
                        viewBox="0 0 24 24"
                        width="12"
                      >
                        <title>
                          , Opens a new tab
                        </title>
                        <path
                          d="test-file-stub"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    class="box relative"
                    style="display: inline;"
                  >
                    <div
                      class="box xsDisplayVisuallyHidden"
                    >
                      ; Opens a new tab
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        aria-hidden="true"
        data-floating-ui-focus-guard=""
        data-floating-ui-inert=""
        data-type="inside"
        role="button"
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;
